{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 195,
  "lineage": "4d5ba169-3570-9a56-5dfd-f24b8caf4569",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcd88d9487ed4087",
            "arn": "arn:aws:ec2:us-east-1:885684264653:elastic-ip/eipalloc-0bcd88d9487ed4087",
            "association_id": "eipassoc-0cd1057c094b17d05",
            "domain": "vpc",
            "id": "eipalloc-0bcd88d9487ed4087",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05a3166da2f50e380",
            "private_dns": "ip-10-0-0-181.ec2.internal",
            "private_ip": "10.0.0.181",
            "public_dns": "ec2-100-48-30-177.compute-1.amazonaws.com",
            "public_ip": "100.48.30.177",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-nat-eip"
            },
            "tags_all": {
              "Name": "sre-lab-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "eipalloc-0bcd88d9487ed4087",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:internet-gateway/igw-0f522cc732d072408",
            "id": "igw-0f522cc732d072408",
            "owner_id": "885684264653",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-igw"
            },
            "tags_all": {
              "Name": "sre-lab-igw"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "igw-0f522cc732d072408",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcd88d9487ed4087",
            "association_id": "eipassoc-0cd1057c094b17d05",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fd8488b8ddc80047",
            "network_interface_id": "eni-05a3166da2f50e380",
            "private_ip": "10.0.0.181",
            "public_ip": "100.48.30.177",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05121b0996281f75a",
            "tags": {
              "Name": "sre-lab-nat"
            },
            "tags_all": {
              "Name": "sre-lab-nat"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "nat-0fd8488b8ddc80047",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:route-table/rtb-0db48ff09c9059b06",
            "id": "rtb-0db48ff09c9059b06",
            "owner_id": "885684264653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd8488b8ddc80047",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-lab-private-rt"
            },
            "tags_all": {
              "Name": "sre-lab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtb-0db48ff09c9059b06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:route-table/rtb-0a80887f669618fae",
            "id": "rtb-0a80887f669618fae",
            "owner_id": "885684264653",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f522cc732d072408",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-lab-public-rt"
            },
            "tags_all": {
              "Name": "sre-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtb-0a80887f669618fae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eb04e19e81383eb",
            "region": "us-east-1",
            "route_table_id": "rtb-0db48ff09c9059b06",
            "subnet_id": "subnet-0b5dad418a581e56b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtbassoc-08eb04e19e81383eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b8652f2bf024b2",
            "region": "us-east-1",
            "route_table_id": "rtb-0db48ff09c9059b06",
            "subnet_id": "subnet-0b4e873fc0e7b46b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtbassoc-046b8652f2bf024b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182feae2b297632e",
            "region": "us-east-1",
            "route_table_id": "rtb-0a80887f669618fae",
            "subnet_id": "subnet-05121b0996281f75a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtbassoc-0182feae2b297632e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acbae8d832e78301",
            "region": "us-east-1",
            "route_table_id": "rtb-0a80887f669618fae",
            "subnet_id": "subnet-0ad5f6417fbdfb5c5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "rtbassoc-0acbae8d832e78301",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:subnet/subnet-0b5dad418a581e56b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5dad418a581e56b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-private-a",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sre-lab-private-a",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "subnet-0b5dad418a581e56b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:subnet/subnet-0b4e873fc0e7b46b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4e873fc0e7b46b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-private-b",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sre-lab-private-b",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "subnet-0b4e873fc0e7b46b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:subnet/subnet-05121b0996281f75a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05121b0996281f75a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-public-a",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sre-lab-public-a",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "subnet-05121b0996281f75a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:subnet/subnet-0ad5f6417fbdfb5c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad5f6417fbdfb5c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885684264653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-public-b",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sre-lab-public-b",
              "kubernetes.io/cluster/sre-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b72d24f029963fcc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "subnet-0ad5f6417fbdfb5c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885684264653:vpc/vpc-0b72d24f029963fcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042e511385b992ecf",
            "default_route_table_id": "rtb-0d79f5c39b2dbb29b",
            "default_security_group_id": "sg-072488dae9a2cf5ca",
            "dhcp_options_id": "dopt-065d2ea0b558ad1e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b72d24f029963fcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d79f5c39b2dbb29b",
            "owner_id": "885684264653",
            "region": "us-east-1",
            "tags": {
              "Name": "sre-lab-vpc",
              "kubernetes.io/cluster/sre-lab": "shared"
            },
            "tags_all": {
              "Name": "sre-lab-vpc",
              "kubernetes.io/cluster/sre-lab": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "885684264653",
            "id": "vpc-0b72d24f029963fcc",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}